# freelance-tax-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: seed.py
src/freelance_tax_mcp/: config.py  server.py
src/freelance_tax_mcp/memory/: db.py  models.py  queries.py
src/freelance_tax_mcp/tools/: advance_tax.py  expenses.py  gst.py  invoice.py  tds.py
src/freelance_tax_mcp/utils/: date_helpers.py  pdf_gen.py  tax_calc.py
tests/: test_advance_tax.py  test_gst.py
