[project]
name = "freelance-tax-mcp"
version = "0.1.0"
description = "MCP server — Indian freelancer tax agent"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "groq>=0.9.0",
    "anthropic>=0.30.0",
    "sqlmodel>=0.0.19",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.2.0",
]

[project.scripts]
tax-mcp = "freelance_tax_mcp.server:main"   # run with: uv run tax-mcp

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]    # errors, pyflakes, isort

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]